INT131_Sourav/force-app/main/default/objects/Customers__c/fields/loan__c.field-meta.xml
<CustomField>
    <fullName>loan__c</fullName>
    <label>loan</label>
    <summarizedField>Bank_Account__c.Loan_Balance__c</summarizedField>
    <summaryForeignKey>Bank_Account__c.Customers__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>