INT131_Sourav/force-app/main/default/objects/Customers__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <formula>sumofall__c  -  loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>