INT131_Sourav/force-app/main/default/objects/Customers__c/fields/sumofall__c.field-meta.xml
<CustomField>
    <fullName>sumofall__c</fullName>
    <label>sumofall</label>
    <summarizedField>Bank_Account__c.Balance__c</summarizedField>
    <summaryForeignKey>Bank_Account__c.Customers__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>