INT131_Sourav/force-app/main/default/objects/Customers__c/fields/Total_number_of_accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_accounts__c</fullName>
    <label>Total number of accounts</label>
    <summaryForeignKey>Bank_Account__c.Customers__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>